# cuda-mandelbrot

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  main.cpp  mandelbrot_cpu.cpp  mandelbrot_gpu.cu
.devcontainer/: Dockerfile  devcontainer.json
